Merged local development branch, which includes: - Implemented ReplicaClient and Replica interfaces - Implemented a web like architecture - Added an offline sudoku demonstration application - Provided a bunch of utilities for byte encoded data - Implemented a network layer - Implemented a pbft thread